<resources>
    <string name="app_name">French Pastry</string>
    <string name="txt_net_dialog">لطفا دسترسی به اینترنت را بررسی کنید</string>
    <string name="splash_image">splash image</string>
    <string name="login_main_pic">login_main_pic</string>
    <string name="logo">logo</string>
    <string name="goToApp">ورود به برنامه</string>
    <string name="frenchPastry">شیرینی فرانسوی</string>
    <string name="dec_login">جهت ورود به برنامه شماره موبایل خود را در کادر زیر وارد کرده و کدارسالی به موبایل خود را در برنامه وارد کنید.</string>
    <string name="code">کد تایید</string>
    <string name="edit_number">ویرایش شماره</string>
    <string name="resend_code">ارسال مجدد کد</string>
    <string name="arrow_left">arrow_left</string>
    <string name="enter_code">enter code</string>
    <string name="enterCode">کد را وارد کنید</string>
    <string name="user_data">اطلاعات کاربری</string>
    <string name="enter_name">نام خود را وارد کنید</string>
    <string name="img_back">img_back</string>
    <string name="bell">bell</string>
    <string name="menu">menu</string>
    <string name="ic_home">ic_home</string>
    <string name="ic_cake">ic_cake</string>
    <string name="ic_shopping_bag">ic_shopping_bag</string>
    <string name="ic_pastry">ic_pastry</string>
    <string name="ic_user">ic_user</string>
    <string name="ic_close">ic_close</string>
    <string name="back_nav">back_nav</string>
    <string name="user_profile">پروفایل کاربری</string>
    <string name="my_orders">سفارش های من</string>
    <string name="support">پشتیبانی</string>
    <string name="about_us">درباره ما</string>
    <string name="connect_us">connect_us</string>
    <string name="connectUs">ارتباط با ما</string>
    <string name="ic_update">ic_update</string>
    <string name="update">بروزرسانی نرم افزار</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="ic_bottom_nav">ic_bottom-nav</string>
    <string name="version1">نسخه 1.1</string>
    <string name="ic_recycler">ic_recycler</string>
    <string name="ic_arrow_left">ic_arrow_left</string>
    <string name="all">بیشتر</string>
    <string name="sell">تومان</string>
    <string name="img_off">img_off</string>
    <string name="ic_back_white">ic back_white</string>
    <string name="ic_btn_shopping">ic_btn_shopping</string>
    <string name="banner">Banner</string>
    <string name="f_logo_decs">f_logo_decs</string>
    <string name="img_search">img_search</string>
</resources>