<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.NavDrawerActivity">


    <ImageView
        android:id="@+id/ic_close_nav"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_close_nav">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/back_nav"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back_navigation_header" />

            <TextView
                android:id="@+id/txt_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="@dimen/text_large_size"
                android:textStyle="bold"
                android:textColor="@color/white_main"
                tools:text="09102939013"
                app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                app:layout_constraintStart_toStartOf="@+id/imageView8"
                app:layout_constraintTop_toTopOf="@+id/imageView8" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                tools:text="سید حسین حسینی"
                android:textColor="@color/white_main"
                android:textStyle="bold"
                android:textSize="@dimen/text_large_size"
                app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                app:layout_constraintEnd_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toTopOf="@+id/imageView8" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/ic_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView8"
                app:srcCompat="@drawable/ic_user" />

            <TextView
                android:id="@+id/txt_profile_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/user_profile"
                android:textColor="@color/black_main"
                android:textSize="@dimen/text_large_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/imageView9"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView8" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/dotted"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_profile_page" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/ic_shopping_bag"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:srcCompat="@drawable/ic_shopping" />

            <TextView
                android:id="@+id/txt_my_orders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/my_orders"
                android:textColor="@color/black_main"
                android:textSize="@dimen/text_large_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/imageView10"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/dotted"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_my_orders" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/support"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                app:srcCompat="@drawable/ic_support" />

            <TextView
                android:id="@+id/txt_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/support"
                android:textColor="@color/black_main"
                android:textSize="@dimen/text_large_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/imageView11"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <View
                android:id="@+id/view4"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/dotted"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_support" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/about_us"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4"
                app:srcCompat="@drawable/ic_about_us" />

            <TextView
                android:id="@+id/txt_about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/about_us"
                android:textColor="@color/black_main"
                android:textSize="@dimen/text_large_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/imageView12"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4" />

            <View
                android:id="@+id/view5"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/dotted"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_about_us" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/connect_us"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view5"
                app:srcCompat="@drawable/ic_connect_us" />

            <TextView
                android:id="@+id/txt_connect_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/connectUs"
                android:textColor="@color/black_main"
                android:textStyle="bold"
                android:textSize="@dimen/text_large_size"
                app:layout_constraintEnd_toStartOf="@+id/imageView13"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view5" />

            <View
                android:id="@+id/view9"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/dotted"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_connect_us" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/ic_update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view9"
                app:srcCompat="@drawable/ic_update" />

            <TextView
                android:id="@+id/txt_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/update"
                android:textSize="@dimen/text_large_size"
                android:textStyle="bold"
                android:textColor="@color/black_main"
                app:layout_constraintEnd_toStartOf="@+id/imageView14"
                app:layout_constraintTop_toBottomOf="@+id/view9" />

            <TextView
                android:id="@+id/txt_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:textColor="@color/gray_main"
                android:textSize="@dimen/text_small_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/txt_update"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view9"
                android:text="@string/version1" />

            <View
                android:id="@+id/view10"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/dotted"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_update" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/ic_update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view10"
                app:srcCompat="@drawable/ic_logout" />

            <TextView
                android:id="@+id/txt_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/logout"
                android:textSize="@dimen/text_large_size"
                android:textStyle="bold"
                android:textColor="@color/black_main"
                app:layout_constraintEnd_toStartOf="@+id/imageView15"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view10" />

            <View
                android:id="@+id/view11"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/dotted"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_logout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/ic_bottom_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nest"
        app:srcCompat="@drawable/ic_bottom_nav" />

</androidx.constraintlayout.widget.ConstraintLayout>