<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layoutDirection="ltr"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_app_bar"
        android:visibility="visible"
        app:constraint_referenced_ids="txt_alert_count, back_text_alert_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white_main"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/img_back"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <ImageView
        android:id="@+id/img_bell"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/bell"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/img_back"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bell" />

    <ImageView
        android:id="@+id/ic_logo"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/ic_menu"
        app:layout_constraintStart_toEndOf="@+id/img_bell"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/ic_menu"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/menu"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_menu" />

    <View
        android:id="@+id/back_text_alert_count"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/back_view_bell"
        app:layout_constraintBottom_toTopOf="@+id/img_bell"
        app:layout_constraintStart_toStartOf="@+id/img_bell"
        app:layout_constraintTop_toTopOf="@+id/img_bell" />

    <TextView
        android:id="@+id/txt_alert_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="9sp"
        tools:text="55"
        android:textColor="@color/white_main"
        app:layout_constraintBottom_toBottomOf="@+id/back_text_alert_count"
        app:layout_constraintEnd_toEndOf="@+id/back_text_alert_count"
        app:layout_constraintStart_toStartOf="@+id/back_text_alert_count"
        app:layout_constraintTop_toTopOf="@+id/back_text_alert_count"
        tools:ignore="SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>