<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/back_dialog_network"
    android:paddingBottom="24dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/code"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/heading_large_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/color_text_gray"
        android:textSize="@dimen/text_small_size"
        app:layout_constraintEnd_toEndOf="@+id/txt_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        tools:text="کد به شماره 09102939013 ارسال شد" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEnterCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/txt_title"
        app:layout_constraintStart_toStartOf="@+id/txt_title"
        app:layout_constraintTop_toBottomOf="@+id/textNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtCode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/back_edit_text"
            android:gravity="center_horizontal"
            android:hint="@string/enterCode"
            android:inputType="number"
            android:maxLength="5"
            android:paddingTop="12dp"
            android:paddingBottom="-12dp"
            android:textColor="@color/color_text_black"
            android:textColorHint="@color/color_text_gray"
            android:textSize="@dimen/text_normal_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:background="@drawable/back_text_time"
        android:padding="5dp"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/text_small_size"
        app:layout_constraintBottom_toBottomOf="@+id/inputEnterCode"
        app:layout_constraintStart_toStartOf="@+id/inputEnterCode"
        app:layout_constraintTop_toTopOf="@+id/inputEnterCode"
        app:layout_constraintVertical_bias="0.44"
        tools:text="00:59" />

    <com.example.frenchpastry.ui.customView.CustomButtonImportant
        android:id="@+id/btnConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:text="تایید کد ارسالی"
        app:layout_constraintEnd_toEndOf="@+id/inputEnterCode"
        app:layout_constraintStart_toStartOf="@+id/inputEnterCode"
        app:layout_constraintTop_toBottomOf="@+id/inputEnterCode" />

    <TextView
        android:id="@+id/txtEditNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/edit_number"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/button_small_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnConfirm"
        app:layout_constraintTop_toBottomOf="@+id/btnConfirm" />

    <TextView
        android:id="@+id/txtResendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/resend_code"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/button_small_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txtEditNumber"
        app:layout_constraintStart_toStartOf="@+id/btnConfirm"
        app:layout_constraintTop_toTopOf="@+id/txtEditNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>